--- a/package.json
+++ b/package.json
@@ -25,10 +25,12 @@
         "@nestjs/core": "^10.0.0",
         "@nestjs/jwt": "^10.2.0",
         "@nestjs/mapped-types": "^2.0.5",
+        "@nestjs/mongoose": "^10.0.10",
         "@nestjs/passport": "^10.0.3",
         "@nestjs/platform-express": "^10.0.0",
         "class-transformer": "^0.5.1",
         "class-validator": "^0.14.1",
+        "mongoose": "^8.7.1",
         "passport": "^0.7.0",
         "passport-jwt": "^4.0.1",
         "passport-local": "^1.0.0",
